feat: assignments for students
